Client can send basic messages to backend

--- a/src/gui/default.html
+++ b/src/gui/default.html
@@ -1,5 +1,14 @@
 <body>
     <p>Hello world!</p>
+
+    <label for="messageType">MessageType: </label>
+    <input type="text" id="messageType" name="name">
+
+    <label for="data">Data: </label>
+    <input type="text" id="data" name="name">
+
+    <button onclick="sendMessage()">Send message!</button>
+
     <script src="model.js"></script>
     <script src="default.js"></script>
 </body>
