Added create room message

--- a/src/gui/default.html
+++ b/src/gui/default.html
@@ -9,6 +9,8 @@
 
     <button onclick="sendMessage()">Send message!</button>
 
+    <button onclick="createRoom()">Send create room message!</button>
+
     <script src="model.js"></script>
     <script src="default.js"></script>
 </body>
