Adding basic functionality to GUI

--- a/src/gui/default.html
+++ b/src/gui/default.html
@@ -23,12 +23,13 @@
     </div>
 
     <div>
-        <label for="message">roomId: </label>
+        <label for="message">Message: </label>
         <input type="text" id="message" name="message">
 
         <button onclick="sendMessage()">Send message!</button>
     </div>
 
+    <textarea id="log-area" rows="100" cols="100"></textarea>
     <script src="model.js"></script>
     <script src="default.js"></script>
 </body>
